# EvilClawd

./: .env.example  .gitignore  README.md  pyproject.toml
src/scanner/agents/: __init__.py  base.py  exploit.py  recon.py  vuln.py
src/scanner/cli/: __init__.py  recon.py
src/scanner/core/: __init__.py  config.py  output.py  severity.py
src/scanner/core/llm/: __init__.py  anthropic_provider.py  client.py  context.py  tools.py
src/scanner/core/persistence/: audit.py  checkpoint.py  database.py  models.py
src/scanner/core/reporting/: __init__.py  export.py  generator.py
src/scanner/core/reporting/templates/: finding.md.j2  pentest_report.md.j2
src/scanner/core/safety/: __init__.py  approval.py  risk.py  scope.py
src/scanner/telegram_bot/: __init__.py  callbacks.py  formatters.py  handlers.py  notifications.py
src/scanner/tools/: __init__.py  base.py  commix.py  headers.py  nmap.py  sqlmap.py  subfinder.py  whatweb.py  xss.py
tests/: test_cli.py  test_cli_vuln.py  test_exploit_agent.py  test_headers_severity.py  test_integration.py  test_pipeline_integration.py  test_recon_agent.py  test_recon_integration.py  test_reporting.py  test_telegram_callbacks.py  test_telegram_handlers.py  test_tools.py  test_vuln_agent.py  test_vuln_tools.py
